# historic-events-generator

./: .env.example  .env.production  .gitignore  README.md  deploy-to-app-runner.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  scripts.py
.github/workflows/: deploy-frontend.yml  deploy.yml
backend/: .coverage  .dockerignore  Dockerfile  Dockerfile-copy-requirements.tsx  README.md  apprunner.yml  config.py  main.py  pyproject.toml  requirements.txt  scripts.py
backend/app/: config.py  main.py  test_main.py
backend/app/models/: chat.py
backend/app/routers/: chat.py
backend/app/services/: __init__.py  gemini_service.py  openai_service.py
backend/app/tests/services/: test_gemini_service.py  test_openai_service.py  test_services_init.py
backend/app/tests/utils/: test_provider_utils.py  test_response_cleanup.py
backend/app/utils/: provider_utils.py  response_cleanup.py
backend/routers/: chat.py
backend/scripts/: run.py  test.sh  test_with_coverage.sh
backend/services/: __init__.py  ai_service.py  gemini_service.py  openai_service.py
backend/services/utils/: response_cleanup.py
frontend/: .dockerignore  .env.sample  Dockerfile  Dockerfile.dev  README.md  biome.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  test.setup.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: _headers  browserconfig.xml  manifest.json  robots.txt  sitemap.xml
frontend/src/: App.css  App.tsx  index.css  main.tsx  theme.tsx
frontend/src/components/: EventCard.tsx  Footer.tsx  Header.tsx
frontend/src/components/Common/: Footer.tsx  Navbar.tsx  Select.tsx
frontend/src/components/Header/: EventCard.tsx  Header.tsx
frontend/src/components/ui/: color-mode.tsx  provider.tsx
frontend/src/pages/About/: About.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/services/api/: ApiClient.ts  AxiosApiClient.ts
frontend/src/services/devices/: DevicesService.test.ts  DevicesService.ts
frontend/src/services/llmProviders/: LLMProviderService.ts
frontend/src/theme/: button.recipe.ts
