[project]
name = "historic-events-generator"
version = "0.1.0"
description = "API service layer that connects to various LLMs to generate historical events."
authors = [
    {name = "Andre Birkus",email = "birkusandre@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "openai (>=1.66.3,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "llamaapi (>=0.1.36,<0.2.0)",
    "google-genai (>=1.23.0,<2.0.0)",
]

[tool.poetry]
package-mode = true
packages = [{include = "scripts"}]


[tool.poetry.scripts]
dev = "scripts.run:dev"
prod = "scripts.run:prod"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
start-prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
